# tmux-bot

./: .env.template  .gitignore  CONFIG-SUMMARY.md  README.md  config.yaml  main.py  pyproject.toml
config/agents/: agents.yaml
config/environments/: development.yaml  production.yaml  staging.yaml
config/providers/: openai.yaml  openrouter.yaml
scripts/: migrate_config.py  setup-config.py
tests/: __init__.py  conftest.py
tests/model/: __init__.py  mock_provider.py  test_factory_simple.py
tests/providers/: __init__.py  test_openai.py
tmuxbot/: __init__.py  app.py
tmuxbot/agents/: __init__.py  coder.py  devops.py  primary.py  sysadmin.py
tmuxbot/config/: __init__.py  settings.py
tmuxbot/core/: __init__.py  context.py
tmuxbot/model/: factory.py
tmuxbot/providers/: __init__.py  openai.py
tmuxbot/tools/: __init__.py
tmuxbot/utils/: yaml_utils.py
